--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ body{
     display: flex;
     flex-direction: row;
     justify-content: center;
+    cursor: pointer;
 }
 
 .container-buttons .button{
@@ -53,6 +54,7 @@ body{
     font-size: 50px;
     margin: 10px;
     border: 1px solid #000000;
+    cursor: pointer;
 
 }
 .container-igual {
