--- a/style.css
+++ b/style.css
@@ -9,7 +9,11 @@ body{
     justify-content: center;
     height: 100vh;
 }
-
+h1{
+    font-size: 26px;
+    color: white;
+    margin-top: 10px;
+}
 
 .container{
     width: auto;
@@ -18,6 +22,8 @@ body{
     flex-direction: column;
     align-items: center;
 
+    background-color: #000000;
+    border-radius: 10px;
 
 }
 
@@ -28,9 +34,12 @@ body{
     justify-content: flex-end;
     align-items: center;
    
- 
+    color: white;
     font-size: 50px;
     border: 1px solid #000000;
+    background-color: #978b8b;
+    margin-top: 10px;
+    border-radius: 10px;
    
 }
 
@@ -55,6 +64,7 @@ body{
     margin: 10px;
     border: 1px solid #000000;
     cursor: pointer;
+    background-color: white;
 
 }
 .container-igual {
@@ -69,4 +79,6 @@ body{
 
     font-size: 50px;
     border: 1px solid #000000;
+    background-color: white;
+    margin-bottom: 10px;
 }
